# castor

./: .gitignore  CASTOR.md  CHANGELOG.md  Cargo.toml  GEMINI.md  LICENSE  README.md  demo_config.json  generate_test_data.py  justfile  test_config.json
.github/workflows/: ci.yml
demo_data/gemini_tmp/project_alpha_hash/chats/: research_rust.json
docs/: ARCHITECTURE.md  CONFIGURATION.md  TROUBLESHOOTING.md  USAGE.md
scripts/: generate_test_data.py
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs
src/audit/: logger.rs  mod.rs
src/core/: cache.rs  mod.rs  registry.rs  scanner.rs  session.rs
src/ops/: doctor.rs  executor.rs  export.rs  grep.rs  mod.rs  prune.rs  stats.rs
src/tui/: app.rs  event.rs  mod.rs  theme.rs  ui.rs
src/utils/: fs.rs  icons.rs  mod.rs  term.rs
test_data/gemini_tmp/project_alpha_hash/chats/: debug_macro.json
test_data/gemini_tmp/project_beta_hash/chats/: frontend_refactor.json  web_api_design.json
tests/: integration_test.rs  ops_test.rs  perf_bench.rs  stress_test.rs
tests/common/: mod.rs
tests/common/fixtures/content_edge_cases/chats/: session-2026-03-08T11-00-dddd4444.json  session-2026-03-08T11-10-ffff6666.json
tests/common/fixtures/edge_cases/chats/: session-2026-03-08T11-00-edge0001.json  session-2026-03-08T11-05-error001.json
tests/common/fixtures/file_integrity/chats/: session-2026-03-08T11-25-cccc4444.json
tests/common/fixtures/multilingual/chats/: session-2026-03-08T12-00-lang0001.json  session-2026-03-08T12-05-lang0002.json  session-2026-03-08T12-10-lang0003.json
tests/common/fixtures/multilingual_test/chats/: session-2026-03-08T12-00-arabic11.json  session-2026-03-08T12-05-japan222.json  session-2026-03-08T12-10-korean33.json  session-2026-03-08T12-15-spain444.json  session-2026-03-08T12-20-latin555.json  session-2026-03-08T12-25-russia66.json  (+1 more)
(+12 files in other folders)
