[package]
name = "castor"
version = "0.1.0"
edition = "2024"

[dependencies]
# CLI Parsing
clap = { version = "4.5.60", features = ["derive"] }
clap_complete = "4.5.66"
colored = "3.1.1"

# TUI
ratatui = { version = "0.30.0", features = ["serde"] }
tui-markdown = "0.3.7"
crossterm = { version = "0.29.0", features = ["events"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Error Handling
thiserror = "2.0.18"
anyhow = "1.0.102"

# Files & Directories
walkdir = "2.5.0"
fs_extra = "1.3.0"
directories = "6.0.0"

# DateTime
chrono = { version = "0.4.44", features = ["serde"] }

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["json"] }

# UUID/Batch IDs
uuid = { version = "1.22.0", features = ["v4", "serde"] }

# Utils
unicode-width = "0.2.2"
regex = "1.12.3"

[dev-dependencies]
tempfile = "3.26.0"
filetime = "0.2.27"
